Fix issue with the schedule on mobile

--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -106,6 +106,8 @@
 	}
 
     .region-sidebar-first {
+        position: absolute;
+        top: 0;
         left: -100%;
         width: auto;
         height: 3000px;
